Start of code cleanup, mostly remove A BUNCH of unused imports and some code quality fixes.